[project]
name = "ren-blue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi[standard]>=0.127.0",
    "langchain>=1.2.0",
    "langchain-huggingface>=1.2.0",
    "tavily-python>=0.7.17",
]
